--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+        <relativePath/> <!--lookup parent from repository -->
+    </parent>
 
-    <groupId>org.example</groupId>
+    <groupId>marketing.company</groupId>
     <artifactId>MarketingCompany</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>MarketingCompanyDomain</module>
+        <module>MarketingCompanyRepository</module>
+        <module>MarketingCompanyWebApplication</module>
+        <module>MarketingCompanyTranslator</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
