--- a/MarketingCompanyDomain/pom.xml
+++ b/MarketingCompanyDomain/pom.xml
@@ -11,15 +11,17 @@
     <artifactId>MarketingCompanyDomain</artifactId>
     <packaging>jar</packaging>
     <dependencies>
-        <dependency>
+       <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
