--- a/MarketingCompanyLogic/pom.xml
+++ b/MarketingCompanyLogic/pom.xml
@@ -8,10 +8,36 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>MarketingCompanyLogic</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>marketing.company</groupId>
+            <artifactId>MarketingCompanyDomain</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+            <dependency>
+                <groupId>marketing.company</groupId>
+                <artifactId>MarketingCompanyTranslator</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
+<!--
+  <dependency>
+        <groupId>marketing.company</groupId>
+        <artifactId>MarketingCompany</artifactId>
+        <version>${project.version}</version>
+        <scope>provided</scope>
+    </dependency>
+       <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
+        -->
+    </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
