--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -10,22 +10,30 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>MarketingCompanyWebApplication</artifactId>
     <packaging>war</packaging>
+
     <dependencies>
+        <!--
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.1.6.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>1.5.20</version>
-        </dependency>
-        <dependency>
+   <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>5.1.8.RELEASE</version>
         </dependency>
+
+            <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>22.0.0</version>
+        <scope>compile</scope>
+        </dependency>
+           -->
+
+
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
