--- a/pom.xml
+++ b/pom.xml
@@ -4,27 +4,58 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
-        <relativePath/> <!--lookup parent from repository -->
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.6.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
+    <modules>
+        <module>MarketingCompanyDomain</module>
+        <module>MarketingCompanyLogic</module>
+        <module>MarketingCompanyRepository</module>
+        <module>MarketingCompanyTranslator</module>
+        <module>MarketingCompanyWebApplication</module>
+    </modules>
     <groupId>marketing.company</groupId>
     <artifactId>MarketingCompany</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>MarketingCompanyDomain</module>
-        <module>MarketingCompanyRepository</module>
-        <module>MarketingCompanyWebApplication</module>
-        <module>MarketingCompanyTranslator</module>
-        <module>MarketingCompanyLogic</module>
-    </modules>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <version>1.0-SNAPSHOT</version>
+<name>MarketingCompany</name>
+<description>Demo project for Spring Boot</description>
+
+   <dependencies>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter</artifactId>
+           <scope>provided</scope>
+       </dependency>
+       <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+           <scope>runtime</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-test</artifactId>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <scope>test</scope>
+       </dependency>
+               <dependency>
+                   <groupId>org.junit.jupiter</groupId>
+                   <artifactId>junit-jupiter</artifactId>
+                   <version>5.8.1</version>
+                   <scope>test</scope>
+               </dependency>
+   </dependencies>
+           <properties>
+               <java.version>1.8</java.version>
+               <maven.compiler.source>8</maven.compiler.source>
+               <maven.compiler.target>8</maven.compiler.target>
+           </properties>
 
 </project>
