--- a/MarketingCompanyRepository/pom.xml
+++ b/MarketingCompanyRepository/pom.xml
@@ -11,9 +11,21 @@
     <artifactId>MarketingCompanyRepository</artifactId>
     <packaging>jar</packaging>
     <dependencies>
+
+        <dependency>
+            <groupId>marketing.company</groupId>
+            <artifactId>MarketingCompanyDomain</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.9.RELEASE</version>
         </dependency>
     </dependencies>
     <properties>
