--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -12,28 +12,28 @@
     <packaging>war</packaging>
 
     <dependencies>
-        <!--
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.1.6.RELEASE</version>
         </dependency>
-   <dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>5.1.8.RELEASE</version>
         </dependency>
 
-            <dependency>
-        <groupId>org.jetbrains</groupId>
-        <artifactId>annotations</artifactId>
-        <version>22.0.0</version>
-        <scope>compile</scope>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
         </dependency>
-           -->
-
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -46,7 +46,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                    <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
+                  <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
                 </configuration>
             </plugin>
         </plugins>
