--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,15 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.1.6.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
+        <version>1.0-SNAPSHOT</version>
+        <name>MarketingCompany</name>
+        <description>Demo project for Spring Boot</description>
+
+
     </parent>
+    <groupId>marketing.company</groupId>
+    <artifactId>MarketingCompany</artifactId>
+    <packaging>pom</packaging>
     <modules>
         <module>MarketingCompanyDomain</module>
         <module>MarketingCompanyLogic</module>
@@ -16,13 +24,15 @@
         <module>MarketingCompanyTranslator</module>
         <module>MarketingCompanyWebApplication</module>
     </modules>
-    <groupId>marketing.company</groupId>
-    <artifactId>MarketingCompany</artifactId>
-    <packaging>pom</packaging>
 
-    <version>1.0-SNAPSHOT</version>
-<name>MarketingCompany</name>
-<description>Demo project for Spring Boot</description>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <haltOnFailure>false</haltOnFailure>
+    </properties>
+    <dependencyManagement>
+
 
    <dependencies>
        <dependency>
@@ -35,6 +45,9 @@
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>
+        </dependencies>
+       </dependencyManagement>
+    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
@@ -51,11 +64,21 @@
                    <version>5.8.1</version>
                    <scope>test</scope>
                </dependency>
-   </dependencies>
-           <properties>
-               <java.version>1.8</java.version>
-               <maven.compiler.source>8</maven.compiler.source>
-               <maven.compiler.target>8</maven.compiler.target>
-           </properties>
-
+       <dependency>
+           <groupId>org.jetbrains</groupId>
+           <artifactId>annotations</artifactId>
+           <version>22.0.0</version>
+           <scope>compile</scope>
+       </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+</dependencies>
+    <build>
+    <pluginManagement>
+    <plugins>
+    </plugins>
+    </pluginManagement>
+    </build>
 </project>
