--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -12,6 +12,21 @@
     <packaging>war</packaging>
 
     <dependencies>
+
+
+        <dependency>
+            <groupId>marketing.company</groupId>
+            <artifactId>MarketingCompanyDomain</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>marketing.company</groupId>
+            <artifactId>MarketingCompanyLogic</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -48,6 +63,11 @@
                     <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
                   <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.6.RELEASE</version>
             </plugin>
         </plugins>
     </build>
