--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -41,11 +41,6 @@
 
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
             <artifactId>springfox-bean-validators</artifactId>
             <version>2.9.2</version>
         </dependency>
@@ -60,8 +55,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                  <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
+                  <!--> <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+                  <webXml>src\test\webapp\WEB-INF\web.xml</webXml>-->
                 </configuration>
             </plugin>
             <plugin>
