--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <artifactId>MarketingCompany</artifactId>
         <groupId>marketing.company</groupId>
@@ -10,60 +11,64 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>MarketingCompanyWebApplication</artifactId>
     <packaging>war</packaging>
-
-    <dependencies>
-
-
-        <dependency>
-            <groupId>marketing.company</groupId>
-            <artifactId>MarketingCompanyDomain</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>marketing.company</groupId>
-            <artifactId>MarketingCompanyLogic</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>2.1.6.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>5.1.8.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-bean-validators</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-    </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                  <!--> <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                  <webXml>src\test\webapp\WEB-INF\web.xml</webXml>-->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.1.6.RELEASE</version>
-            </plugin>
-        </plugins>
-    </build>
+
+       <dependencies>
+
+
+           <dependency>
+               <groupId>marketing.company</groupId>
+               <artifactId>MarketingCompanyDomain</artifactId>
+               <version>${project.version}</version>
+               <scope>provided</scope>
+           </dependency>
+           <dependency>
+               <groupId>marketing.company</groupId>
+               <artifactId>MarketingCompanyLogic</artifactId>
+               <version>${project.version}</version>
+
+           </dependency>
+
+
+           <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-autoconfigure</artifactId>
+               <version>2.1.6.RELEASE</version>
+           </dependency>
+
+           <dependency>
+               <groupId>org.springframework</groupId>
+               <artifactId>spring-web</artifactId>
+               <version>5.1.8.RELEASE</version>
+           </dependency>
+
+           <dependency>
+               <groupId>io.springfox</groupId>
+               <artifactId>springfox-bean-validators</artifactId>
+               <version>2.9.2</version>
+           </dependency>
+       </dependencies>
+
+       <build>
+           <plugins>
+               <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-war-plugin</artifactId>
+                   <configuration>
+                     <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+                     <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
+                   </configuration>
+               </plugin>
+               <plugin>
+                   <groupId>org.springframework.boot</groupId>
+                   <artifactId>spring-boot-maven-plugin</artifactId>
+
+               </plugin>
+           </plugins>
+       </build>
+
+
 </project>
