--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
-
     </parent>
+
+    <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
     <name>MarketingCompany</name>
     <description>Demo project for Spring Boot</description>
@@ -30,6 +31,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <haltOnFailure>false</haltOnFailure>
     </properties>
+
     <dependencyManagement>
         <dependencies>
 
@@ -46,6 +48,7 @@
             </dependency>
 
 <!--
+
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-bean-validators</artifactId>
@@ -80,6 +83,7 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <scope>runtime</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -103,11 +107,76 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                              <groupId>org.jacoco</groupId>
+                                   <artifactId>jacoco-maven-plugin</artifactId>
+                                   <version>0.8.3</version>
 
+                                   <configuration>
+                                    <haltOnFailure>${haltOnFailure}</haltOnFailure>
+                                  <rules>
+                                       <rule>
+                                             <element>CLASS</element>
+                                            <execudes>
+                                                    <exclude>marketing.company.domain.dto.*</exclude>
+                                                    <exclude>marketing.company.config.RepositoryConfig</exclude>
+                                                    <exclude>marketing.company.logic.config.LogicConfig</exclude>
+                                                    <exclude>marketing.company.config</exclude>
+
+                                                                           <exclude>marketing.company.web.config</exclude>
+                                                </execudes>
+                                                <limits>
+                                                    <limit>
+                                                        <counter>INSTRUCTION</counter>
+                                                        <value>COVEREDRATIO</value>
+                                                        <minimun>0.8</minimun>
+                                                    </limit>
+                                                    <limit>
+                                                        <counter>LINE</counter>
+                                                        <value>COVEREDRATIO</value>
+                                                        <minimun>0.8</minimun>
+                                                    </limit>
+                                                    <limit>
+                                                        <counter>BRANCH</counter>
+                                                        <value>COVEREDRATIO</value>
+                                                        <minimun>0.8</minimun>
+                                                </limit>
+                                              </limits>
+
+                                        </rule>
+                                    </rules>
+                            </configuration>
+
+                                    <executions>
+
+                                        <execution>
+                                            <id>jacoco-check</id>
+                                            <phase>test</phase>
+                                            <goals>
+                                                <goal>check</goal>
+                                            </goals>
+                                        </execution>
+                                        <execution>
+                                            <id>default-prepare-agent</id>
+                                            <goals>
+                                                <goal>prepare-agent</goal>
+                                            </goals>
+                                        </execution>
+                                        <execution>
+                                            <id>default-report</id>
+                                            <phase>prepare-package</phase>
+                                            <goals>
+                                                <goal>report</goal>
+                                            </goals>
+                                        </execution>
+                                    </executions>
+                             </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
 </project>
