--- a/MarketingCompanyRepository/src/main/resources/DataBase.properties
+++ b/MarketingCompanyRepository/src/main/resources/DataBase.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/MarketingCompany
 spring.datasource.username=root
 spring.datasource.password=29382467MysqlPassword@1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.datasource=mysql
+spring.jpa.datasource=marketingcompany
 spring.jpa.datasource-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.open-in-view=true
