--- a/MarketingCompanyTranslator/pom.xml
+++ b/MarketingCompanyTranslator/pom.xml
@@ -45,6 +45,10 @@
             <version>${angular-ui-router-bower.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
